<resources>
    <string name="app_name">MyS3Chat</string>
    <string name="Logout">Logout</string>
    <string name="Profile">Profile</string>
    <string name="Contacts">Contacts</string>
    <string name="AddContacts">Add Contacts</string>
    <string name="title_activity_main">MyS3Chat</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record">Record</string>
    <string name="see_record">see_record</string>
    <string name="upload">UPLOAD</string>
    <string name="False">False</string>
    <string name="True">True</string>
    <string name="your_game_s_subject_is">your game\'s subject is</string>
    <string name="textview">TextView</string>
    <string name="start">It\'s time to film </string>
    <string name="wait_for_gussing">Wait for guessing</string>
    <string name="do_you_think_it_was_a_lie_or_maybe_the_truth">Do you think it was a lie? or maybe the truth?</string>
    <string name="your_turn_now_start_filming">click for continue</string>
    <string name="click_to_play_the_video_it_may_took_a_few_seconds">Click to play the video..it may take a few seconds</string>
    <string name="win_messege">YOU WON!!</string>
    <string name="lose_messege">YOU LOSE! maybe next Time</string>
    <string name="click_for_continue">Click for continue</string>
    <string name="result">Result</string>
    <string name="round_over">Round over!!</string>
    <string name="do_you_want_another_round">Do you want another round?</string>
    <string name="button">Button</string>
    <string name="end_game">End Game</string>
    <string name="score_for_the_game">Score for the game</string>
    <string name="wait_for_your_friend_to_guess">Wait for your friend to guess</string>
    <string name="Continue">continue</string>
    <string name="Result">result</string>
    <string name="category">category:</string>
    <string name="wait_for_your_friend_response">wait for your friend response</string>
    <string name="full_name">Full Name</string>
    <string name="friend_requests">FRIEND REQUESTS</string>
    <string name="score_board">score board</string>


</resources>
