<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mys3soft.mys3chat.ActivityMain">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>

<!--        <com.google.android.material.tabs.TabLayout-->
<!--            android:id="@+id/tabs"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="56dp"-->
<!--            app:tabIndicatorColor="@color/tabsIndicatorColor" />-->

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="323dp" />
    <Button
        android:id="@+id/score_board_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="score_board"
        android:text="@string/score_board" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="profile_button"
        android:text="@string/Profile" />

    <Button
        android:id="@+id/add_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="add_contact_button"
        android:text="@string/AddContacts" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/friend_req_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="request_friend_button"
            android:text="@string/friend_requests" />

        <TextView
            android:id="@+id/textOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/friend_req_button"
            android:layout_alignRight="@id/friend_req_button"
            android:background="@drawable/item_count"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:translationZ="5dp" />
    </RelativeLayout>



    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logout_button"
        android:text="@string/Logout" />




</LinearLayout>
