<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".give_up_or_continue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-66dp"
        tools:layout_editor_absoluteY="37dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="40dp">

            <TextView
                android:id="@+id/round_over_view_text"
                android:layout_width="281dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:text="@string/round_over"
                android:textSize="36sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="326dp"
                android:layout_height="123dp"
                android:layout_marginTop="76dp"
                android:text="@string/do_you_want_another_round"
                android:textSize="24sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/round_over_view_text" />

            <Button
                android:id="@+id/end_game_button"
                android:layout_width="110dp"
                android:layout_height="101dp"
                android:layout_gravity="clip_horizontal|center|left"
                android:layout_marginStart="48dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:text="@string/end_game"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/continue_buttton"
                android:layout_width="110dp"
                android:layout_height="101dp"
                android:layout_gravity="right"
                android:layout_marginTop="-104dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="30dp"
                android:text="Continue"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.596"
                app:layout_constraintStart_toEndOf="@+id/end_game_button"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>