<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".film_and_send_video">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="715dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="40dp">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:text="please wait in this screen until upload is complete" />

            <TextView
                android:id="@+id/score_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/score_for_the_game"
                app:layout_constraintBottom_toTopOf="@+id/textViewTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/categort_text_view"
                android:layout_width="149dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/category"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/put_category"
                android:layout_width="260dp"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categort_text_view" />

            <TextView
                android:id="@+id/choose_treu_false"
                android:layout_width="329dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="record yourself telling a"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.542"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/put_category" />


            <TextView
                android:id="@+id/textView_truFalse"
                android:layout_width="322dp"
                android:layout_height="86dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.542"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_treu_false" />

            <TextView
                android:id="@+id/up_view"
                android:layout_width="329dp"
                android:layout_height="81dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="about the given Category and then upload"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.542"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_truFalse" />


            <ProgressBar
                android:id="@+id/pbar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="344dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:max="100"
                app:layout_constraintBottom_toTopOf="@+id/button_rec"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="0dp"
                android:onClick="record"
                android:text="@string/record"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <Button
                android:id="@+id/button_upload"
                android:layout_width="372dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginStart="64dp"
                android:layout_marginBottom="28dp"
                android:onClick="upload"
                android:text="@string/upload"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>